--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <section>
             <h2>Származásuk, elterjedésük</h2>
             <p>A család a sarkvidékek kivételével az egész Földön elterjedt, de a több mint 500 faj zöme trópusi tájakon él. Magyarországon jelenleg 4 fajuk honos, mind védett:</p>
-            <ol>
-                <li><img src="forras/images/butterfly_icon.png" alt="">fecskefarkú lepke (Papilio machaon): Magyarországon védett, természetvédelmi értéke 10 000 Ft,</li>
-                <li><img src="forras/images/butterfly_icon.png" alt="">kardoslepke (Iphiclides podalirius): Magyarországon védett, természetvédelmi értéke 10 000 Ft,</li>
-                <li><img src="forras/images/butterfly_icon.png" alt="">kis apollólepke (kis Apolló-lepke, Parnassius mnemosyne): Magyarországon védett, természetvédelmi értéke 50 000 Ft,</li>
-                <li><img src="forras/images/butterfly_icon.png" alt="">farkasalmalepke (Zerynthia polyxena): Magyarországon védett, természetvédelmi értéke 50 000 Ft,</li>
+            <ol style="list-style-type: none;">
+                <li><img src="forras/images/butterfly_icon.png" alt=""><b>fecskefarkú lepke</b><span>(Papilio machaon)</span>: Magyarországon védett, természetvédelmi értéke 10 000 Ft,</li>
+                <li><img src="forras/images/butterfly_icon.png" alt=""><b>kardoslepke</b><span>(Iphiclides podalirius)</span>: Magyarországon védett, természetvédelmi értéke 10 000 Ft,</li>
+                <li><img src="forras/images/butterfly_icon.png" alt=""><b>kis apollólepke</b><span>(kis Apolló-lepke, Parnassius mnemosyne)</span>: Magyarországon védett, természetvédelmi értéke 50 000 Ft,</li>
+                <li><img src="forras/images/butterfly_icon.png" alt=""><b>farkasalmalepke</b><span>(Zerynthia polyxena)</span>: Magyarországon védett, természetvédelmi értéke 50 000 Ft,</li>
             </ol>
             <p>Az apolló-lepke (nagy apollólepke, Parnassius apollo) napjainkban valószínűleg már nem honos Magyarországon; irodalmi adatok szerint magasabb hegységeinkben (Bakony, Bükk-vidék) élt valaha. Utoljára észlelt példányai a nyugati határszélen valószínűleg Ausztriából sodródtak át.</p>
         </section>
@@ -36,19 +36,19 @@
             <h2>Rendszerezésük</h2>
             <p>A családot három alcsaládra osztják:</p>
             <ol>
-                <li>Baróniaformák
+                <li><b>Baróniaformák</b>
                     <ul>
                         <li>Barónia (Baronia brevicornis)</li>
                     </ul>
                 </li>
-                <li>Apollóformák
+                <li><b>Apollóformák</b>
                     <ul>
                         <li>Lüdorfiarokonúak (Luehdorfiini)</li>
                         <li>Apolló-rokonúak (Parnassiini)</li>
                         <li>Farkasalmalepkék (Zerynthiini)</li>
                     </ul>
                 </li>
-                <li>Pillangóformák
+                <li><b>Pillangóformák</b>
                     <ul>
                         <li>Leptocircini</li>
                         <li>Pillangórokonúak (Papilionini)</li>
@@ -57,6 +57,7 @@
                     </ul>
                 </li>
             </ol>
+            <img src="forras/images/butterfly.png" alt="pillango.png">
         </section>
     </main>
 </body>
